Criptografia da senha no BD
