# src/modules/accounts/dtos/ICreateUserDTO.ts
@@ -1,0 +1,8 @@
+interface ICreateUserDTO {
+  name: string
+  password: string
+  email: string
+  driver_license: string
+}
+
+export {ICreateUserDTO}
